Rough entries for contact and faq pages, some styling to make sure it's not too much of a mess

--- a/AlgebraThing/war/AlgebraThing.css
+++ b/AlgebraThing/war/AlgebraThing.css
@@ -528,3 +528,7 @@ input.secondary-op.ng-invalid {
 	margin: 0 auto;
 	top: 150px;
 }
+
+div#faq-box {
+	margin-right: 200px;
+}
